fix css spill over

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.board {
   display: grid;
   grid-template-columns: 33% 33% 33%;
   grid-column-gap: 10px;
